# Lab13

./: CMakeLists.txt  helpers.cpp  helpers.h  linreg_predictor.cpp  linreg_predictor.h  main.cpp  utils.h
.github/workflows/: release.yml
